<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="fr.wcs.poo.MainActivity">

    <Spinner
        android:id="@+id/vehicle_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp" />

    <LinearLayout
        android:id="@+id/vehicle_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <EditText
            android:id="@+id/brand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/brand" />

        <EditText
            android:id="@+id/model"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/model" />

        <EditText
            android:id="@+id/fuel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fuel" />

        <EditText
            android:id="@+id/power"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/power" />

        <EditText
            android:id="@+id/year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/year" />

        <EditText
            android:id="@+id/type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/type" />

        <EditText
            android:id="@+id/kilometers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/kilometers" />

        <EditText
            android:id="@+id/hours"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hours" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"/>
    </LinearLayout>

</LinearLayout>
